fix spacing on profile infinity container

--- a/static/users/users.css
+++ b/static/users/users.css
@@ -190,7 +190,24 @@ button {
 
 /* SIGNUP PAGE STYLES */
 
-
+.alert {
+  font-family: "Montserrat", sans-serif;
+  font-family: "Orbitron", sans-serif;
+  position: absolute;
+  background-color: rgb(120, 175, 37);
+  padding: 20px;
+  border-radius: 10px;
+  bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+  width: 700px;
+  margin-bottom: 90px;
+  z-index: 100;
+  
+}
 
 .alert-success {
   font-family: "Montserrat", sans-serif;
@@ -207,7 +224,7 @@ button {
   text-align: center;
   width: 700px;
   margin-bottom: 90px;
-  
+  z-index: 100;
 }
 
 strong {
